--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "firebase-functions": "latest",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
+    
   },
   "devDependencies": {
     "@types/node": "^22",
