--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase-functions": "latest",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
@@ -48,7 +49,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.5",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
